@@ -11,8 +11,10 @@ collectd (4.4.1-2) UNRELEASED; urgency=low
     longer available. libupsclient-config.sh is a simple wrapper around
     pkg-config. This is a workaround until upstream supports pkg-config for
     libupsclient.
+  * Replaced nut-dev build dependency with libupsclient1-dev:
+    Reenabled the "nut" plugin on all architectures.
 
- -- Sebastian Harl <sh@tokkee.org>  Mon, 07 Jul 2008 20:24:57 +0000
+ -- Sebastian Harl <sh@tokkee.org>  Mon, 07 Jul 2008 20:36:55 +0000
 
 collectd (4.4.1-1) unstable; urgency=low
 
